--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,85 @@
-body{
-	margin-top: 0;
+body {
+  font-size: 16px;
+  color: #000;
+  background-color: #61122f;
+  font-family: 'Oxygen', sans-serif;
 }
 
-a{
-	float: left;
-	margin-left: 0;
-	text-decoration: none;
-	color: black;
 
-}
-.container{
-	margin-top: 0;
-}
-/*start header*/
-header{
-	margin-top: 20px;
-	margin-bottom: 20px;
-	text-align: center;
-	font-weight: bold;
-	font-family: times;
-	font-size: 50px;
+
+
+
+
+
+
+/** HEADER **/
+#header-nav {
+  background-color: #f6b319;
+  border-radius: 0;
+  border: 0;
+  margin-bottom: 30px;
 }
 
-/*end header*/
+
+
+.navbar-brand {
+  padding-top: 25px;
+  margin-bottom: 20px;
+}
+
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+  color: white;
+}
+.navbar-brand p { 
+  color: #000;
+  text-transform: uppercase;
+  font-size: .7em;
+  margin-top: 15px;
+}
+.navbar-brand p span { 
+  font-size: 30px;
+  vertical-align: middle;
+}
+
+#nav-list {
+  margin-top: 10px;
+}
+#nav-list a {
+  color: #951C49;
+  text-align: center;
+}
+#nav-list a:hover {
+  background: #E7E7E7;
+}
+#nav-list a span {
+  font-size: 1.8em;
+}
+
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+
+/* END HEADER */
+/*content*/
+.content-header{
+  color: #fff;
+}
+
 .content p{
-	background-color: #ccc;
-	padding:2%;
+  background-color: #ccc;
+  padding:2%;
 }
 .content h2{
-	text-align: center;
-	font-weight: bold;
-	font-family: times;
-	font-size: 20px;
-	background-color: #ccc;
-	margin-bottom: 0;
+  text-align: center;
+  font-weight: bold;
+  font-family: times;
+  font-size: 20px;
+  background-color: #ccc;
+  margin-bottom: 0;
 }
-
-
-/*drop-down*/
-
-
-/*xs devices*/
-
-
